--- a/config/database.yml
+++ b/config/database.yml
@@ -21,5 +21,7 @@ test:
   database: db/test.sqlite3
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+  adapter: mysql2
+  database: pet
+  username: cokr3430
+  password: <%= ENV["mysql_password"] %>
