--- a/config/database.yml
+++ b/config/database.yml
@@ -22,6 +22,6 @@ test:
 
 production:
   adapter: mysql2
-  database: pet
-  username: cokr3430
+  database: new_pet
+  username: swp_pet
   password: <%= ENV["mysql_password"] %>
